# wrclip

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: e2e_test.rs
