[package]
name = "wrclip"
version = "0.1.0"
authors = ["pkunk <pkunk.ab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
os_pipe = "0.9"
structopt = "0.2"
tempfile = "3.1"
wayland-client = "0.25"

[dev-dependencies]
rand = "0.7"
