[package]
name = "wrclip"
version = "0.1.0"
authors = ["pkunk <pkunk.ab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_pipe = "0.9"
structopt = "0.2"
tempfile = "3.1"
wayland-client = "0.25.0"

[dependencies.wayland-protocols]
features = ["client"]
version = "0.25.0"

[dev-dependencies]
rand = "0.7"
